// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests > Wave 1 snapshot 1`] = `
[
  {
    "count": 6,
    "enemyType": "salamander",
    "hpMultiplier": 1,
    "spawnIntervalMs": 585,
  },
]
`;

exports[`Snapshot Tests > Wave 5 snapshot 1`] = `
[
  {
    "count": 10,
    "enemyType": "snake",
    "hpMultiplier": 1.8,
    "spawnIntervalMs": 525,
  },
  {
    "count": 10,
    "enemyType": "salamander",
    "hpMultiplier": 1.8,
    "spawnIntervalMs": 525,
  },
  {
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 2.7,
    "spawnIntervalMs": 0,
  },
]
`;

exports[`Snapshot Tests > Wave 10 snapshot 1`] = `
[
  {
    "count": 14,
    "enemyType": "snake",
    "hpMultiplier": 3.7806149836799987,
    "spawnIntervalMs": 450,
  },
  {
    "count": 14,
    "enemyType": "salamander",
    "hpMultiplier": 3.7806149836799987,
    "spawnIntervalMs": 450,
  },
  {
    "count": 14,
    "enemyType": "water_spirit",
    "hpMultiplier": 3.7806149836799987,
    "spawnIntervalMs": 450,
  },
  {
    "count": 14,
    "enemyType": "golem",
    "hpMultiplier": 3.7806149836799987,
    "spawnIntervalMs": 450,
  },
  {
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 5.670922475519998,
    "spawnIntervalMs": 0,
  },
]
`;

exports[`Snapshot Tests > Wave 15 snapshot 1`] = `
[
  {
    "count": 18,
    "enemyType": "snake",
    "hpMultiplier": 7.940583141569842,
    "spawnIntervalMs": 375,
  },
  {
    "count": 18,
    "enemyType": "salamander",
    "hpMultiplier": 7.940583141569842,
    "spawnIntervalMs": 375,
  },
  {
    "count": 18,
    "enemyType": "water_spirit",
    "hpMultiplier": 7.940583141569842,
    "spawnIntervalMs": 375,
  },
  {
    "count": 18,
    "enemyType": "golem",
    "hpMultiplier": 7.940583141569842,
    "spawnIntervalMs": 375,
  },
  {
    "count": 18,
    "enemyType": "beetle",
    "hpMultiplier": 7.940583141569842,
    "spawnIntervalMs": 375,
  },
  {
    "count": 10,
    "enemyType": "fly",
    "hpMultiplier": 6.352466513255874,
    "spawnIntervalMs": 800,
  },
  {
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 11.910874712354763,
    "spawnIntervalMs": 0,
  },
]
`;

exports[`Snapshot Tests > Wave 20 snapshot 1`] = `
[
  {
    "count": 22,
    "enemyType": "snake",
    "hpMultiplier": 16.677937557875413,
    "spawnIntervalMs": 300,
  },
  {
    "count": 22,
    "enemyType": "salamander",
    "hpMultiplier": 16.677937557875413,
    "spawnIntervalMs": 300,
  },
  {
    "count": 22,
    "enemyType": "water_spirit",
    "hpMultiplier": 16.677937557875413,
    "spawnIntervalMs": 300,
  },
  {
    "count": 22,
    "enemyType": "golem",
    "hpMultiplier": 16.677937557875413,
    "spawnIntervalMs": 300,
  },
  {
    "count": 22,
    "enemyType": "beetle",
    "hpMultiplier": 16.677937557875413,
    "spawnIntervalMs": 300,
  },
  {
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 25.016906336813122,
    "spawnIntervalMs": 0,
  },
]
`;
